added autogenerated name for library

--- a/example/build.gradle
+++ b/example/build.gradle
@@ -8,7 +8,10 @@ android {
         minSdkVersion 16
         targetSdkVersion 29
         versionCode 1
-        versionName "1.0"
+        versionName "1.0.0"
+
+        setProperty("archivesBaseName", "Android-VAD-v." + versionName)
+
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
