--- a/vad/build.gradle
+++ b/vad/build.gradle
@@ -9,18 +9,17 @@ android {
         minSdkVersion 16
         targetSdkVersion 29
         versionCode 1
-        versionName "1.0"
+        versionName "1.0.0"
+
+        setProperty("archivesBaseName", "android-vad-v." + versionName)
+
+        ndk {
+            abiFilters "armeabi-v7a", "x86", "x86_64", "arm64-v8a"
+        }
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles 'consumer-rules.pro'
     }
-
-    defaultConfig {
-        ndk {
-            abiFilters "armeabi-v7a", "x86", "x86_64", "arm64-v8a"
-        }
-    }
-
     externalNativeBuild {
         ndkBuild {
             path "./src/main/jni/Android.mk"
