--- a/vad/build.gradle
+++ b/vad/build.gradle
@@ -1,4 +1,7 @@
 apply plugin: 'com.android.library'
+apply plugin: 'com.github.dcendents.android-maven'
+
+group='com.github.gkonovalov'
 
 android {
     compileSdkVersion 29
