--- a/example/build.gradle
+++ b/example/build.gradle
@@ -1,12 +1,16 @@
-apply plugin: 'com.android.application'
+plugins {
+    id 'com.android.application'
+}
 
 android {
-    compileSdkVersion 29
-    buildToolsVersion "29.0.2"
+    namespace "com.konovalov.vad.example"
+
+    compileSdkVersion 33
+
     defaultConfig {
         applicationId "com.konovalov.vad.example"
         minSdkVersion 16
-        targetSdkVersion 29
+        targetSdkVersion 33
         versionCode 2
         versionName "1.0.1"
 
@@ -14,26 +18,32 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.3.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
-    implementation 'com.airbnb.android:lottie:3.4.0'
-    implementation 'org.permissionsdispatcher:permissionsdispatcher:4.8.0'
-    annotationProcessor 'org.permissionsdispatcher:permissionsdispatcher-processor:4.8.0'
     implementation project(path: ':vad')
+    implementation 'com.airbnb.android:lottie:3.4.0'
+    implementation 'com.github.permissions-dispatcher:permissionsdispatcher:4.9.2'
+    annotationProcessor 'com.github.permissions-dispatcher:permissionsdispatcher-processor:4.9.2'
 
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.3.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    implementation 'com.google.android.material:material:1.3.0'
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test:runner:1.5.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    implementation 'com.google.android.material:material:1.9.0'
 }
