--- a/example/build.gradle
+++ b/example/build.gradle
@@ -9,7 +9,7 @@ android {
 
     defaultConfig {
         applicationId "com.konovalov.vad.example"
-        minSdkVersion 16
+        minSdkVersion 21
         targetSdkVersion 33
         versionCode 2
         versionName "1.0.1"
@@ -38,7 +38,8 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
     implementation project(path: ':vad')
-    implementation 'com.airbnb.android:lottie:3.4.0'
+    implementation 'com.microsoft.onnxruntime:onnxruntime-android:1.14.0'
+
     implementation 'com.github.permissions-dispatcher:permissionsdispatcher:4.9.2'
     annotationProcessor 'com.github.permissions-dispatcher:permissionsdispatcher-processor:4.9.2'
 
