--- a/example/build.gradle
+++ b/example/build.gradle
@@ -1,4 +1,6 @@
 plugins {
+    id 'kotlin-kapt'
+    id 'kotlin-android'
     id 'com.android.application'
 }
 
@@ -27,8 +29,8 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
 }
 
@@ -36,11 +38,14 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.core:core-ktx:1.10.1'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
     implementation project(path: ':vad')
 
-    implementation 'com.github.permissions-dispatcher:permissionsdispatcher:4.9.2'
-    annotationProcessor 'com.github.permissions-dispatcher:permissionsdispatcher-processor:4.9.2'
+    implementation "com.github.permissions-dispatcher:permissionsdispatcher:4.9.2"
+    implementation 'androidx.test.ext:junit-ktx:1.1.5'
+    kapt "com.github.permissions-dispatcher:permissionsdispatcher-processor:4.9.2"
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test:runner:1.5.2'
