--- a/vad/build.gradle
+++ b/vad/build.gradle
@@ -1,4 +1,5 @@
 plugins {
+    id 'kotlin-android'
     id 'com.android.library'
     id 'maven-publish'
 }
@@ -42,13 +43,15 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'androidx.core:core-ktx:1.10.1'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'com.microsoft.onnxruntime:onnxruntime-android:1.15.0'
 
     testImplementation 'junit:junit:4.13.2'
