--- a/example/build.gradle
+++ b/example/build.gradle
@@ -36,19 +36,19 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation project(path: ':vad')
+
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.core:core-ktx:1.10.1'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-
-    implementation project(path: ':vad')
-
+    
     implementation "com.github.permissions-dispatcher:permissionsdispatcher:4.9.2"
-    implementation 'androidx.test.ext:junit-ktx:1.1.5'
     kapt "com.github.permissions-dispatcher:permissionsdispatcher-processor:4.9.2"
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test:runner:1.5.2'
+    androidTestImplementation 'androidx.test.ext:junit-ktx:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation 'com.google.android.material:material:1.9.0'
 }
