--- a/example/build.gradle
+++ b/example/build.gradle
@@ -13,7 +13,7 @@ android {
         applicationId "com.konovalov.vad.example"
         minSdkVersion 21
         targetSdkVersion 33
-        versionCode 5
+        versionCode 4
         versionName "2.0.0"
 
         setProperty("archivesBaseName", "Android-VAD-v" + versionName)
@@ -29,14 +29,8 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
-
-    tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
-        kotlinOptions {
-            jvmTarget = JavaVersion.VERSION_1_8
-        }
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
 }
 
