--- a/example/build.gradle
+++ b/example/build.gradle
@@ -51,5 +51,6 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test:runner:1.5.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    androidTestImplementation 'androidx.test.ext:junit-ktx:1.1.5'
     implementation 'com.google.android.material:material:1.9.0'
 }
