--- a/vad/build.gradle
+++ b/vad/build.gradle
@@ -55,6 +55,7 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.microsoft.onnxruntime:onnxruntime-android:1.15.0'
+    implementation(platform("org.jetbrains.kotlin:kotlin-bom:1.8.21"))
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test:runner:1.5.2'
