--- a/vad/build.gradle
+++ b/vad/build.gradle
@@ -11,7 +11,7 @@ android {
     defaultConfig {
         minSdkVersion 21
         targetSdkVersion 33
-        versionCode 7
+        versionCode 8
 
         ndk {
             abiFilters "armeabi-v7a", "x86", "x86_64", "arm64-v8a"
@@ -54,7 +54,7 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.microsoft.onnxruntime:onnxruntime-android:1.15.0'
-    implementation(platform("org.jetbrains.kotlin:kotlin-bom:1.8.21"))
+    implementation(platform('org.jetbrains.kotlin:kotlin-bom:1.8.21'))
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test:runner:1.5.2'
