--- a/example/build.gradle
+++ b/example/build.gradle
@@ -7,13 +7,12 @@ plugins {
 android {
     namespace "com.konovalov.vad.example"
 
-    compileSdkVersion 33
-
     defaultConfig {
+        compileSdk 34
         minSdkVersion 23
-        targetSdkVersion 33
-        versionCode 9
-        versionName "2.0.3"
+        targetSdkVersion 34
+        versionCode 10
+        versionName "2.0.4"
 
         setProperty("archivesBaseName", "Android-VAD-v" + versionName)
 
@@ -44,8 +43,8 @@ dependencies {
     implementation project(path: ':yamnet')
 
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.6.0'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.6.0'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.7.4'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.7.4'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     
     implementation 'com.github.permissions-dispatcher:permissionsdispatcher:4.9.2'
@@ -55,5 +54,5 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.5.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     androidTestImplementation 'androidx.test.ext:junit-ktx:1.1.5'
-    implementation 'com.google.android.material:material:1.9.0'
+    implementation 'com.google.android.material:material:1.10.0'
 }
