--- a/silero/build.gradle
+++ b/silero/build.gradle
@@ -6,13 +6,12 @@ plugins {
 android {
     namespace "com.konovalov.vad.silero"
 
-    compileSdkVersion 33
-
     defaultConfig {
-        minSdkVersion 23
-        targetSdkVersion 33
-        versionCode 9
-        versionName "2.0.3"
+        compileSdk 34
+        minSdkVersion 21
+        targetSdkVersion 34
+        versionCode 10
+        versionName "2.0.4"
 
         setProperty("archivesBaseName", "android-vad-silero-v" + versionName)
 
@@ -54,6 +53,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation project(path: ':utils')
 
     implementation(platform('org.jetbrains.kotlin:kotlin-bom:1.8.21'))
     implementation 'com.microsoft.onnxruntime:onnxruntime-android:1.15.1'
