--- a/webrtc/build.gradle
+++ b/webrtc/build.gradle
@@ -6,13 +6,12 @@ plugins {
 android {
     namespace "com.konovalov.vad.webrtc"
 
-    compileSdkVersion 33
-
     defaultConfig {
-        minSdkVersion 22
-        targetSdkVersion 33
-        versionCode 9
-        versionName "2.0.3"
+        compileSdk 34
+        minSdkVersion 16
+        targetSdkVersion 34
+        versionCode 10
+        versionName "2.0.4"
 
         setProperty("archivesBaseName", "android-vad-webrtc-v" + versionName)
 
@@ -56,6 +55,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation project(path: ':utils')
 
     implementation(platform('org.jetbrains.kotlin:kotlin-bom:1.8.21'))
 
