--- a/yamnet/build.gradle
+++ b/yamnet/build.gradle
@@ -6,13 +6,12 @@ plugins {
 android {
     namespace "com.konovalov.vad.yamnet"
 
-    compileSdkVersion 33
-
     defaultConfig {
+        compileSdk 34
         minSdkVersion 23
-        targetSdkVersion 33
-        versionCode 9
-        versionName "2.0.3"
+        targetSdkVersion 34
+        versionCode 10
+        versionName "2.0.4"
 
         setProperty("archivesBaseName", "android-vad-yamnet-v" + versionName)
 
@@ -54,7 +53,8 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    
+    implementation project(path: ':utils')
+
     implementation(platform('org.jetbrains.kotlin:kotlin-bom:1.8.21'))
     implementation 'org.tensorflow:tensorflow-lite-task-audio:0.4.0'
 
