Added support of different audio data types

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,2 @@
-include ':example', ':webrtc', ':silero', ':yamnet'
+include ':example', ':utils', ':webrtc', ':silero', ':yamnet'
 rootProject.name='VAD'
