--- a/webrtc/build.gradle
+++ b/webrtc/build.gradle
@@ -7,13 +7,13 @@ android {
     namespace "com.konovalov.vad.webrtc"
 
     defaultConfig {
-        compileSdk 34
+        compileSdk 35
         minSdkVersion 16
-        targetSdkVersion 34
-        versionCode 15
-        versionName "2.0.7"
+        targetSdkVersion 35
 
         setProperty("archivesBaseName", "android-vad-webrtc-v" + versionName)
+
+        ndkVersion "21.4.7075529"
 
         ndk {
             abiFilters "armeabi-v7a", "x86", "x86_64", "arm64-v8a"
@@ -56,10 +56,10 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation(platform('org.jetbrains.kotlin:kotlin-bom:1.8.21'))
+    implementation(platform('org.jetbrains.kotlin:kotlin-bom:2.0.21'))
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test:runner:1.4.0'
-    androidTestImplementation 'androidx.test.ext:junit-ktx:1.1.4'
+    androidTestImplementation 'androidx.test.ext:junit-ktx:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
