Added back Version Code and Version Name

--- a/yamnet/build.gradle
+++ b/yamnet/build.gradle
@@ -10,6 +10,8 @@ android {
         compileSdk 35
         minSdkVersion 23
         targetSdkVersion 35
+        versionCode 16
+        versionName "2.0.7"
 
         setProperty("archivesBaseName", "android-vad-yamnet-v" + versionName)
 
