--- a/webrtc/build.gradle
+++ b/webrtc/build.gradle
@@ -10,6 +10,8 @@ android {
         compileSdk 35
         minSdkVersion 16
         targetSdkVersion 35
+        versionCode 16
+        versionName "2.0.7"
 
         setProperty("archivesBaseName", "android-vad-webrtc-v" + versionName)
 
