--- a/yamnet/build.gradle
+++ b/yamnet/build.gradle
@@ -10,8 +10,8 @@ android {
         compileSdk 35
         minSdkVersion 23
         targetSdkVersion 35
-        versionCode 16
-        versionName "2.0.7"
+        versionCode 17
+        versionName "2.0.8"
 
         setProperty("archivesBaseName", "android-vad-yamnet-v" + versionName)
 
@@ -20,7 +20,7 @@ android {
         }
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        consumerProguardFiles 'consumer-rules.pro'
+        consumerProguardFiles 'proguard-rules.pro'
     }
 
     buildTypes {
