--- a/example/build.gradle
+++ b/example/build.gradle
@@ -11,8 +11,8 @@ android {
         compileSdk 35
         minSdkVersion 23
         targetSdkVersion 35
-        versionCode 17
-        versionName "2.0.8"
+        versionCode 18
+        versionName "2.0.9"
 
         setProperty("archivesBaseName", "Android-VAD-v" + versionName)
 
@@ -21,7 +21,7 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
