--- a/silero/build.gradle
+++ b/silero/build.gradle
@@ -10,8 +10,8 @@ android {
         compileSdk 35
         minSdkVersion 21
         targetSdkVersion 35
-        versionCode 17
-        versionName "2.0.8"
+        versionCode 18
+        versionName "2.0.9"
 
         setProperty("archivesBaseName", "android-vad-silero-v" + versionName)
 
@@ -25,7 +25,7 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
