--- a/example/build.gradle
+++ b/example/build.gradle
@@ -9,7 +9,7 @@ android {
 
     defaultConfig {
         compileSdk 35
-        minSdkVersion 23
+        minSdkVersion 24
         targetSdkVersion 35
         versionCode 18
         versionName "2.0.9"
@@ -27,12 +27,12 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
 
     kotlin {
-        jvmToolchain(8)
+        jvmToolchain(11)
     }
 }
 
